# skills

./: .gitignore  Makefile  README.md
birded/birded/: birded.py
dl/: Makefile  dl.py  skill-metadata.py
dl/bot/: .gitignore  Makefile  bot.py  install_launchd_service.sh  pyproject.toml
dl/dl/: SKILL.md  dl.py
dl/docs/: extractors.txt  info-8kwLONoxFew.json  info-PL_PjwQXfPuE43MWpmrWTodJeyTGxMScFO.json
dl/scripts/: dl_music.sh  dl_music_playlsit.sh  dl_video.sh  dl_video_playlist.sh
dl/ums/: ums_install.sh  ums_uninstall.sh
gh-extract/: Makefile  skill-metadata.py
gh-extract/gh-extract/: SKILL.md  gh-extract.py  gh_extract.py
hn-extract/: Makefile  example-output.md  output.md  skill-metadata.py
hn-extract/examples/: hn-46834810.json  hn-46834810.md  hn-46876105.md  hn-46881264.json  hn-46881264.md  hn-46909439.md  hn-46916586.md
hn-extract/hn-extract/: SKILL.md  hn-extract.py  hn_extract.py
mlx-audio-server/: Makefile  ffmpeg-wav.sh  skill-metadata.py
mlx-audio-server/mlx-audio-server/: Makefile  SKILL.md  install.sh
mlx-audio-server/src/: SKILL.md
mlx-stt/: Makefile  skill-metadata.py
mlx-stt/mlx-stt/: SKILL.md  install.sh  mlx-stt.py
mlx-tts/: Makefile  mlx-tts.py  skill-metadata.py
mlx-tts/mlx-tts/: SKILL.md  install.sh  mlx-tts.py  mlx-tts.sh
slug/slug/: slug.py
tg/: send-document.sh  send-photo.sh  send-text.sh
tg/tg/: send-audio.sh  send-video.sh  send-voice.sh
url2pdf/: Makefile  skill-metadata.py
url2png/: Makefile  skill-metadata.py
uv-global/: Makefile  requirements.txt  skill-metadata.py
(+8 files in other folders)
