[project]
name = "dlbot"
version = "1.0.0"
description = "Telegram Download Bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "cryptg>=0.5.0.post0",
    "hachoir>=3.3.0",
    "humanize>=4.12.3",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "pip>=25.1.1",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
    "python-telegram-bot>=22.5",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "telegramify-markdown>=0.5.4",
    "telethon>=1.40.0",
    "typer>=0.20.0",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2025.6.30",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "pytest-asyncio>=1.0.0",
    "pre-commit>=3.7.1",
]

lint = [
    "ruff"
]

[tool.uv]
# let uv manage project env, auto locking and syncing
managed = true

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = [".", "app"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "pytest>=8.4.2",
]
